// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Header /> > renders as expected by default 1`] = `
<body>
  <div>
    <header>
      <nav
        class="d_flex bd-b-w_2px bd-b-c_blue.500 border-bottom-style_solid ai_center jc_space-between w_100% py_4 px_2"
      >
        <div
          class=" d_flex gap_4 ai_center jc_start"
        >
          <div>
            HomeLogo
          </div>
          <div>
            home
          </div>
        </div>
        <div
          class=" d_flex gap_2 ai_center jc_end"
        >
          <div>
            UserLogin
          </div>
        </div>
      </nav>
    </header>
  </div>
</body>
`;

exports[`<Header /> > renders correctly when user logged in 1`] = `
<body>
  <div>
    <header>
      <nav
        class="d_flex bd-b-w_2px bd-b-c_blue.500 border-bottom-style_solid ai_center jc_space-between w_100% py_4 px_2"
      >
        <div
          class=" d_flex gap_4 ai_center jc_start"
        >
          <div>
            HomeLogo
          </div>
          <div>
            home
          </div>
          <div>
            dashboard
          </div>
          <div>
            accounts
          </div>
        </div>
        <div
          class=" d_flex gap_2 ai_center jc_end"
        >
          <div>
            UserLogin
          </div>
        </div>
      </nav>
    </header>
  </div>
</body>
`;

exports[`<Header /> > renders without ColorModeSwitch 1`] = `
<body>
  <div>
    <header>
      <nav
        class="d_flex bd-b-w_2px bd-b-c_blue.500 border-bottom-style_solid ai_center jc_space-between w_100% py_4 px_2"
      >
        <div
          class=" d_flex gap_4 ai_center jc_start"
        >
          <div>
            HomeLogo
          </div>
          <div>
            home
          </div>
        </div>
        <div
          class=" d_flex gap_2 ai_center jc_end"
        >
          <div>
            UserLogin
          </div>
        </div>
      </nav>
    </header>
  </div>
</body>
`;
